--- a/gui/themes/dark.qss
+++ b/gui/themes/dark.qss
@@ -1,14 +1,11 @@
 
-/* AUTHOR */
-div {
-	color: #080;
-	font-weight: bold;
-	font-size: 20px;
-}
-
 /* ------------------------- ALL ------------------------ */
 * {
-	color: #222;
+	color: #f2f2f2;
+}
+
+QMessageBox {
+    background-color: #282c34;
 }
 
 
@@ -17,30 +14,28 @@ div {
 /*                      TABLE WIDGET                      */
 /* ------------------------------------------------------ */
 QTableWidget {
-    border: 1px solid #ddd;
-    /* border-radius: 3px; */
+    background-color: #29313e;
+    /* border: 1px solid #ddd; */
+    border-radius: 3px;
 }
 
 QHeaderView::section {
-    background-color: #ebedef;
-    border-style: none;
-}
-QHeaderView::section:hover {
-    background-color: #ddd;
+    background-color: #303841;
+    padding: 4px;
     border-style: none;
 }
 
 QHeaderView::section:horizontal
 {
-    /* background-color: #eee; */
-    border-right: 1px solid #ddd;
-    /* font-weight: bold; */
+    background-color: #303841;
+    border-right: 1px solid #555;
+    font-weight: bold;
 }
 
 QHeaderView::section:vertical
 {
-    /* background-color: #eee; */
-    border-bottom: 1px solid #ddd;
+    background-color: #303841;
+    border-bottom: 1px solid #555;
 }
 
 /* ------------------------------------------------------ */
@@ -48,7 +43,7 @@ QHeaderView::section:vertical
 /* ------------------------------------------------------ */
 QProgressBar {
 	border: none;
-	background-color: #E5E7EB;
+	background-color: #848991;
 	border-radius: 5px;
 	max-height: 12px;
 }
@@ -60,22 +55,21 @@ QProgressBar:chunk {
 
 /* ------------------------------------------------------ */
 #left_menu {
-	background-color: #e6e7ed;
+	background-color: #21252b;
 }
 
 #content {
-	background-color: #f9f9fa;
+	background-color: #282c34;
 }
 
 #bottom_bar {
-	background-color: #d5d9df;
+	background-color: #21252b;
 }
 
 
 /* LEFT MENU BTNS */
 #left_menu QPushButton {
 	background-color: transparent;
-	color: #222;
 	border: none;
 	text-align: left;
 	padding-left: 55px;
@@ -85,10 +79,10 @@ QProgressBar:chunk {
 
 }
 #left_menu QPushButton:hover {
-	background-color: #f0f1f5;
+	background-color: #343a42;
 }
 #left_menu QPushButton:pressed {
-	background-color: #e1e2e7;
+	background-color: #343a42;
 }
 
 /* ---------------------------------------------------------------- */
@@ -97,25 +91,25 @@ QProgressBar:chunk {
  QPushButton {
 	padding: 0.35em 1em;
 	border: none;
-	background-color: #d1d6db;
+	background-color: #191f28;
 	border-radius: 2px;
 }
  QPushButton:hover {
-	background-color: #dadee3;
+	background-color: #29313e;
 }
  QPushButton:pressed {
-	background-color: #ccd0d5;
+	background-color: #29313e;
 }
 
 #content QLineEdit {
-	background-color: #fff;
+	background-color: #60666e;
 	border: 1px solid #ddd;
 	padding: 0.25em 0.5em;
 	border-radius: 2px;
 }
 
 #content QSpinBox {
-	background-color: #fff;
+	background-color: #60666e;
 	padding: 0.20em 0.35em;
 }
 
@@ -157,3 +151,5 @@ QPushButton[colorBtn="info"]:hover {
 QPushButton[colorBtn="info"]:pressed {
 	background-color: #3082c5;
 }
+
+/* ================================================================ */
